--- a/src/components/Chess.css
+++ b/src/components/Chess.css
@@ -51,3 +51,13 @@ body {
   color: var(--info-text);
   z-index: 1;
 }
+
+.theme[data-theme="light"] .header-image {
+  filter: invert(0);
+}
+
+.header-image {
+  max-height: 50px;
+  width: auto;
+  /* mix-blend-mode: multiply; */
+}
